2008-07-31  Lluis Sanchez Gual <lluis@novell.com> 

	* ObjectUtil.cs: Added hack to make the proxy attribute work for
	  generic types.
	* CollectionAdaptor.cs: Don't try to create a collection adaptor for
	  generic types. It won't work.

2008-07-31  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs, Util.cs, ExpressionEvaluator.cs,
	  Mono.Debugging.Server.Mdb.mdp, ValueReference.cs,
	  NRefactoryEvaluator.cs, ObjectUtil.cs, ArrayElementGroup.cs,
	  RawViewSource.cs, CollectionAdaptor.cs, Makefile,
	  IndexerValueReference.cs: Implemented support for
	  DebuggerDisplayAttribute, DebuggerBrowsableAttribute and
	  DebuggerTypeProxyAttribute.

2008-07-31  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Enable support for conditional breakpoints.
	* Convert.cs: Allow fundamental conversions of strings. Use new boxing
	  API.
	* ObjectUtil.cs: Some cleanup.
	* ArrayElementGroup.cs: Report exception when setting a value.

2008-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* BacktraceWrapper.cs: Implement GetAllLocals.

2008-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Added some support for conditional breakpoints and
	  tracepoints, although it is currently disabled because it requires
	  changes in GUIManager.
	* Util.cs, BacktraceWrapper.cs, ExpressionEvaluator.cs,
	  ArrayValueReference.cs, ValueReference.cs, FieldReference.cs,
	  PropertyReference.cs, VariableReference.cs,
	  LiteralValueReference.cs: Moved several methods for handling
	  TargetObject instances from Util to ObjectUtil.
	* Convert.cs: Casting fixes.
	* Mono.Debugging.Server.Mdb.mdp, Makefile: Added new files.
	* NRefactoryEvaluator.cs: Improved error reporting. Added support for
	  indexers.
	* ObjectUtil.cs: Moved several methods for handling TargetObject
	  instances from Util to ObjectUtil. Added api for invoking target
	  methods and getting property values.
	* CollectionAdaptor.cs: Use new api for calling methods and getting
	  properties.